--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/userProfileLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -40,6 +41,18 @@
                 app:layout_constraintTop_toTopOf="parent" />
             <!---android:src="@drawable/default_user" -->
 
+            <TextView
+                android:id="@+id/russName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/userProfilePicture" />
+
             <ImageView
                 android:id="@+id/russCard"
                 android:layout_width="366dp"
@@ -50,7 +63,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.482"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/userProfilePicture" />
+                app:layout_constraintTop_toBottomOf="@+id/russName" />
+
+            <TextView
+                android:id="@+id/KnuterText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/russCard" />
+
+            <View
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                app:layout_constraintTop_toBottomOf="@+id/KnuterText"
+                tools:layout_editor_absoluteX="0dp" />
 
             <include
                 android:id="@+id/user_knot_list"
@@ -62,7 +94,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/russCard" />
+                app:layout_constraintTop_toBottomOf="@+id/line" />
 
             <RelativeLayout
                 android:id="@+id/loadingPanel"
@@ -74,7 +106,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"
-                    android:indeterminateTint="@color/colorPrimary" />
+                    android:indeterminateTint="@color/colorPrimary"
+                    android:id="@+id/progressBar2" />
+
             </RelativeLayout>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
