--- a/app/src/main/res/layout/knot_list_knot_row.xml
+++ b/app/src/main/res/layout/knot_list_knot_row.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/circularKnotView"
+        android:textColor="@android:color/black"
         android:textSize="24sp" />
 
 </RelativeLayout>
