--- a/app/src/main/res/layout/group_list_dialog.xml
+++ b/app/src/main/res/layout/group_list_dialog.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Group Name"
+        android:hint="Gruppenavn"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/addNewGroupButton"
@@ -30,7 +30,7 @@
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:text="Create Group"
+        android:text="Opprett Gruppe"
         app:layout_constraintBaseline_toBaselineOf="@+id/group"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
