--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -79,7 +79,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:hint="Enter message"
+                android:hint="Skriv melding"
                 android:maxLines="6" />
 
             <Button
