--- a/app/src/main/res/menu/option_menu_add_user.xml
+++ b/app/src/main/res/menu/option_menu_add_user.xml
@@ -3,4 +3,6 @@
 
     <item  android:id="@+id/AddUser"
         android:title="@string/leggTilBruker"/>
+    <item android:id="@+id/LeaveGroup"
+        android:title="@string/forlatGruppe"/>
 </menu>
