--- a/app/src/main/res/layout/activity_knot.xml
+++ b/app/src/main/res/layout/activity_knot.xml
@@ -167,11 +167,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:maxLength="12"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.0" />
@@ -184,10 +185,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:maxLength="12"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.72"
+        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.0" />
