--- a/app/src/main/res/layout/group_list_row.xml
+++ b/app/src/main/res/layout/group_list_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/glaGroupListRowLayout"
     android:layout_width="match_parent"
     android:layout_height="55dp"
@@ -15,13 +15,50 @@
     android:focusable="true"
     android:orientation="vertical">
 
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/userTop1View"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/default_user"
+        app:civ_border_color="#EEEEEE"
+        app:civ_shadow="true"
+        app:civ_shadow_color="@color/colorPrimary"
+        app:civ_shadow_radius="10" />
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/userTop2View"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="-75dp"
+        android:layout_toStartOf="@+id/userTop3View"
+        android:src="@drawable/default_user"
+        app:civ_border_color="#EEEEEE"
+        app:civ_shadow="true"
+        app:civ_shadow_color="@color/colorPrimary"
+        app:civ_shadow_radius="10" />
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/userTop3View"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="67dp"
+        android:src="@drawable/default_user"
+        app:civ_border_color="#EEEEEE"
+        app:civ_shadow="true"
+        app:civ_shadow_color="@color/colorPrimary"
+        app:civ_shadow_radius="10" />
+
     <TextView
         android:id="@+id/glaGroupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@+id/userTop3View"
         android:text="TEST TEST TEST"
         android:textColor="@color/colorBlack"
         android:textSize="24sp"
