--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -70,6 +70,19 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
+            <TextView
+                android:id="@+id/charCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="8sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/280"
+                android:textSize="8sp" />
+
+
             <EditText
                 android:id="@+id/edittext_chatbox"
                 android:layout_width="0dp"
@@ -80,7 +93,8 @@
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:hint="Skriv melding"
-                android:maxLines="6" />
+                android:maxLines="6"
+                android:maxLength="280"/>
 
             <Button
                 android:id="@+id/button_chatbox_send"
