--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigationDrawer"
     android:layout_width="match_parent"
@@ -76,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:textSize="8sp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,21 +93,25 @@
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:hint="Skriv melding"
-                android:maxLines="6"
-                android:maxLength="280"/>
+                android:maxLength="280"
+                android:maxLines="6" />
 
-            <Button
-                android:id="@+id/button_chatbox_send"
-                android:layout_width="64dp"
-                android:layout_height="48dp"
-                android:layout_gravity="bottom"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:gravity="center"
-                android:imeOptions="actionSend"
-                android:text="SEND"
-                android:textSize="14dp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
+                <Button
+                    android:id="@+id/button_chatbox_send"
+                    android:layout_width="64dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:imeOptions="actionSend"
+                    android:text="SEND"
+                    android:textSize="14dp" />
+            </LinearLayout>
         </LinearLayout>
 
 
