--- a/app/src/main/res/layout/activity_group_hub.xml
+++ b/app/src/main/res/layout/activity_group_hub.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/GroupHubLayout"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/GroupHubLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-        <!-- ActionBar -->
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <!-- ActionBar -->
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <!-- Profile pictures -->
+    <!-- Profile pictures -->
     <include
         layout="@layout/content_group_hub_users"
         android:layout_width="320dp"
@@ -78,9 +77,6 @@
     </LinearLayout>
 
 
-
-
-
     <!-- Send message -->
     <LinearLayout
         android:id="@+id/group_layout_chatbox"
@@ -95,6 +91,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/feed_posts">
 
+        <TextView
+            android:id="@+id/groupCharCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="8sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/280"
+            android:textSize="8sp" />
+
         <EditText
             android:id="@+id/group_edittext_chatbox"
             android:layout_width="0dp"
@@ -105,20 +114,25 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="Skriv melding"
+            android:maxLength="280"
             android:maxLines="6" />
 
-        <Button
-            android:id="@+id/group_button_chatbox_send"
-            android:layout_width="64dp"
-            android:layout_height="48dp"
-            android:layout_gravity="bottom"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:gravity="center"
-            android:imeOptions="actionSend"
-            android:text="SEND"
-            android:textSize="14dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+            <Button
+                android:id="@+id/group_button_chatbox_send"
+                android:layout_width="64dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:gravity="center"
+                android:imeOptions="actionSend"
+                android:text="SEND"
+                android:textSize="14dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <RelativeLayout
