--- a/app/src/main/res/layout/scoreboard_user_row.xml
+++ b/app/src/main/res/layout/scoreboard_user_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rvScoreboardLayout"
@@ -16,7 +16,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="19dp"
+        android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/rvPosition"
         android:src="@drawable/default_user"
         app:civ_border_color="#EEEEEE"
@@ -24,20 +24,21 @@
         app:civ_shadow="true"
         app:civ_shadow_color="@color/colorPrimary"
         app:civ_shadow_radius="10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.043"
-        app:layout_constraintStart_toStartOf="@id/rvPosition"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/rvPosition"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/rvPosition"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_marginLeft="8dp"
         android:layout_alignParentStart="true"
-
-        android:layout_marginStart="16dp"
-        android:textSize="30sp"/>
+        android:layout_centerVertical="true"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/rvUser"
@@ -48,7 +49,10 @@
         android:layout_toEndOf="@+id/userProfilePicture"
         android:maxLines="1"
         android:textSize="24sp"
-        android:maxLength="12"/>
+        android:maxLength="12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/userProfilePicture"/>
 
     <TextView
         android:id="@+id/rvPoints"
@@ -56,7 +60,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="25dp"
-        android:textSize="30sp" />
+        android:layout_marginEnd="8dp"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/rvUser"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.80"/>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
