--- a/app/src/main/res/layout/activity_crop_image.xml
+++ b/app/src/main/res/layout/activity_crop_image.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#42000000">
+    android:background="@color/colorGrey">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
