--- a/app/src/main/res/layout/report_bug_dialog.xml
+++ b/app/src/main/res/layout/report_bug_dialog.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorLighterGrey">
 
     <TextView
         android:id="@+id/textView"
@@ -41,6 +42,8 @@
         android:layout_marginEnd="162dp"
         android:layout_marginStart="162dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:textColor="@color/colorPrimaryBackground"
         android:text="Send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
