--- a/app/src/main/res/layout/report_dialog.xml
+++ b/app/src/main/res/layout/report_dialog.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorLighterGrey">
 
     <TextView
         android:id="@+id/textView"
@@ -42,6 +42,8 @@
         android:layout_marginStart="162dp"
         android:layout_marginTop="8dp"
         android:text="Send"
+        android:background="@drawable/button"
+        android:textColor="@color/colorPrimaryBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
