--- a/app/src/main/res/layout/activity_school_register.xml
+++ b/app/src/main/res/layout/activity_school_register.xml
@@ -24,6 +24,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Register"
+
+        android:background="@drawable/button"
+        android:textColor="@color/colorPrimaryBackground"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
